# zeonAI

./: .env  .gitignore  README.md  main.py  pyproject.toml
agents/: base_agent.py  coder_agent.py  critic_agent.py  executive_agent.py  executor_agent.py  memory_agent.py  observer_agent.py  planner_agent.py  research_agent.py  self_improvement_agent.py
brains/computer/: __init__.py
brains/council/: __init__.py  consensus.py  debate.py
brains/critic/: __init__.py
brains/executive/: __init__.py
brains/memory/: __init__.py  episodic.py  knowledge_graph.py  procedural.py  semantic.py  working.py
brains/voice/: __init__.py  multilingual.py  stt.py  tts.py  vad.py  wake_word.py
config/: Modelfile.qwen35
core/: audit_log.py  config.py  event_bus.py  llm.py  registry.py  security_gateway.py
improvements/: skill_compiler.py  zeon_git.py
interfaces/: cli.py  voice_shell.py  web.py
orchestration/: graph.py  router.py  state.py
prompts/: Implemention_plan1  JARVIS_FRIDAY_AI_Blueprint.md  Jarvis_prompt1.md  Jarvis_prompt2.md  dontstop1.md  dontstop2.md  jarvis_prompt3.md
tests/unit/: test_phase0_core.py  test_phase2_memory.py  test_phase3_orchestration.py  test_phase4_voice.py  test_phase5_computer.py  test_phase6_council.py  test_phase7_self_improve.py  test_phase8_interfaces.py
tools/: filesystem.py  search.py  shell.py
