[build-system]
requires = ["setuptools>=68", "setuptools-scm"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "jarvis"
version = "0.1.0"
description = "Project JARVIS — Autonomous AI Operating System"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    # ── Core orchestration ──────────────────────────────────────────
    "langgraph>=0.2.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",

    # ── LLM backend (local) ─────────────────────────────────────────
    "ollama>=0.3.0",
    "llama-cpp-python>=0.2.90",

    # ── Multi-agent frameworks ──────────────────────────────────────
    "crewai>=0.80.0",

    # ── Memory stores ───────────────────────────────────────────────
    "qdrant-client>=1.10.0",
    "neo4j>=5.20.0",
    "redis>=5.0.0",

    # ── Embeddings ──────────────────────────────────────────────────
    "sentence-transformers>=3.0.0",

    # ── Web / research ──────────────────────────────────────────────
    "crawl4ai>=0.4.0",
    "playwright>=1.45.0",
    "duckduckgo-search>=6.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",

    # ── Voice ───────────────────────────────────────────────────────
    "pywhispercpp>=1.2.0",
    "openwakeword>=0.6.0",
    "sounddevice>=0.4.7",
    "numpy>=1.26.0",
    "piper-tts>=1.2.0",

    # ── Computer control ────────────────────────────────────────────
    "pyautogui>=0.9.54",
    "psutil>=6.0.0",
    "watchdog>=4.0.0",

    # ── ML / training ───────────────────────────────────────────────
    "torch>=2.3.0",
    "sentencepiece>=0.2.0",
    "transformers>=4.42.0",
    "datasets>=2.20.0",
    "peft>=0.11.0",

    # ── Swarm / simulation ──────────────────────────────────────────
    # mirofish — install separately from mirofish.co.in

    # ── Interfaces ──────────────────────────────────────────────────
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "websockets>=12.0",

    # ── Data / utilities ────────────────────────────────────────────
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "structlog>=24.0.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.2.0",
    "aiosqlite>=0.20.0",
    "gitpython>=3.1.43",
    "networkx>=3.3.0",
    "schedule>=1.2.0",
    "tenacity>=8.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
jarvis = "interfaces.cli:app"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
